Spotify hero banner update without Responsivity and logo

--- a/02-Spotify/index.html
+++ b/02-Spotify/index.html
@@ -14,11 +14,16 @@
       <div class="textside">
         <h2>Vous cherchez de la musique ?</h1>
         <h3>Écoutez le top des nouveautés.</h3>
-        <div class="button">Ouvrir le lecteur Web</div>
+        <div class="button ">OUVRIR LE LECTEUR WEB</div>
       </div>
 
       <div class="cardside">
-
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
       </div>
     </div>
 
