--- a/02-Spotify/index.html
+++ b/02-Spotify/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>02 - Spotif</title>
+  <title>02 - Spotify</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -18,12 +18,12 @@
       </div>
 
       <div class="cardside">
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
+          <div class="card a"></div>
+          <div class="card b"></div>
+          <div class="card c"></div>
+          <div class="card d"></div>
+          <div class="card e"></div>
+          <div class="card f"></div>
       </div>
     </div>
 
@@ -32,7 +32,7 @@
   <div class="navbar">
 
     <div class="logo">
-      <h1>Spotify</h1>
+      <h1>Spotifyon</h1>
     </div>
 
     <div class="os">
