card with play button and animation/hover

--- a/02-Spotify/index.html
+++ b/02-Spotify/index.html
@@ -5,6 +5,7 @@
   <title>02 - Spotify</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 <body>
   <div class="gradient"> </div>
   <div class="gradient2">
@@ -18,12 +19,54 @@
       </div>
 
       <div class="cardside">
-          <div class="card a"></div>
-          <div class="card b"></div>
-          <div class="card c"></div>
-          <div class="card d"></div>
-          <div class="card e"></div>
-          <div class="card f"></div>
+          <div class="card a">
+            <div class="card black">
+              <div class="pop">
+                <span class="iconify" data-icon="bx:bx-right-arrow-circle" data-inline="false"></span>
+                Spotify Single
+              </div>
+            </div>
+          </div>
+          <div class="card b">
+            <div class="card black">
+              <div class="pop">
+                <span class="iconify" data-icon="bx:bx-right-arrow-circle" data-inline="false"></span>
+                Spotify Single
+              </div>
+            </div>
+          </div>
+          <div class="card c">
+            <div class="card black">
+              <div class="pop">
+                <span class="iconify" data-icon="bx:bx-right-arrow-circle" data-inline="false"></span>
+                Spotify Single
+              </div>
+            </div>
+          </div>
+          <div class="card d">
+            <div class="card black">
+              <div class="pop">
+                <span class="iconify" data-icon="bx:bx-right-arrow-circle" data-inline="false"></span>
+                Spotify Single
+              </div>
+            </div>
+          </div>
+          <div class="card e">
+            <div class="card black">
+              <div class="pop">
+                <span class="iconify" data-icon="bx:bx-right-arrow-circle" data-inline="false"></span>
+                Spotify Single
+              </div>
+            </div>
+          </div>
+          <div class="card f">
+            <div class="card black">
+              <div class="pop">
+                <span class="iconify" data-icon="bx:bx-right-arrow-circle" data-inline="false"></span>
+                Spotify Single
+              </div>
+            </div>
+          </div>
       </div>
     </div>
 
@@ -36,12 +79,13 @@
     </div>
 
     <div class="os">
-    <a href="#">Premium</a>
-    <a href="#">Aide</a>
-    <a href="#">Telecharger</a>
+    <a id="prem" href="#">Premium</a>
+    <a id="aid" href="#">Aide</a>
+    <a id="tel" href="#">Telecharger</a>
     <a href="#">|</a>
-    <a href="#">Photo</a>
-    <a href="#">Profil</a>
+    <div class="pp"></div>
+    <a class="prof" href="#">Profil</a>
+    <span class="iconify prof" data-icon="dashicons:arrow-down-alt2" data-inline="false"></span>
     </div>
 
   </div>
